--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,10 @@ package_dir =
 install_requires =
     napari-plugin-engine>=0.1.4
     numpy
+    napari-tools-menu
+    napari-time-slicer
+    python-igraph
+    matplotlib
 
 [options.packages.find]
 where = src
