added autopep8 for better code quality

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ install_requires =
     napari-time-slicer
     python-igraph
     matplotlib
+    autopep8
 
 [options.packages.find]
 where = src
