use infrastructre in napari-workflows

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,10 +37,9 @@ install_requires =
     napari-plugin-engine>=0.1.4
     numpy
     napari-tools-menu
-    napari-time-slicer
     python-igraph
     matplotlib
-    autopep8
+    napari-workflows
 
 [options.packages.find]
 where = src
