--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = napari-workflow-inspector
-version = 0.1.2
+version = 0.1.3
 author = Robert Haase
 author_email = robert.haase@tu-dresden.de
 url = https://github.com/haesleinhuepf/napari-workflow-inspector
@@ -9,7 +9,7 @@ description = Inspect relationships between napari-plugins in active workflows
 long_description = file: README.md
 long_description_content_type = text/markdown
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 3 - Alpha
     Intended Audience :: Developers
     Framework :: napari
     Topic :: Software Development :: Testing
