--- a/setup.cfg
+++ b/setup.cfg
@@ -39,13 +39,13 @@ install_requires =
     napari-plugin-engine>=0.1.4
     numpy
     napari-tools-menu
-    python-igraph
+    networkx
     matplotlib
     napari-workflows
 
 [options.packages.find]
 where = src
 
-[options.entry_points] 
-napari.plugin = 
+[options.entry_points]
+napari.plugin =
     napari-workflow-inspector = napari_workflow_inspector
