--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = napari-workflow-inspector
-version = 0.1.3
+version = 0.2.0
 author = Robert Haase
 author_email = robert.haase@tu-dresden.de
 url = https://github.com/haesleinhuepf/napari-workflow-inspector
 license = BSD-3-Clause
-description = Inspect relationships between napari-plugins in active workflows
+description = Inspect relationships between image processing operations in active workflows in napari
 long_description = file: README.md
 long_description_content_type = text/markdown
 classifiers =
